@@ -327,6 +327,8 @@ AC_CHECK_TYPE([sig_atomic_t],,[dnl
 # funcs
 
 AC_CHECK_FUNCS_ONCE([
+  getcwd
+  getwd
   readlink
 ])
 
